// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing OHQtyUpdate component render component and test buttons render component with different onhands and new qty 1`] = `
[
  <View
    style={
      {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="closeButton"
        >
          <mockMaterialCommunityIcons
            color="#9e9e9e"
            name="close"
            size={16}
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
        },
        {
          "borderColor": "#e0e0e0",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      onEndEditing={[Function]}
      style={
        {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="11"
    />
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <View
    style={
      [
        {
          "height": 45,
        },
        {
          "marginTop": 16,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0071e9",
            "borderRadius": 5,
            "elevation": 1,
            "flex": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="saveButton"
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontFamily": "Roboto-Medium",
              "fontSize": 16,
              "fontWeight": "normal",
              "textAlign": undefined,
            }
          }
        >
          [missing "en.GENERICS.SAVE" translation]
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`testing OHQtyUpdate component render component and test buttons render component with error 1`] = `
[
  <View
    style={
      {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="closeButton"
        >
          <mockMaterialCommunityIcons
            color="#9e9e9e"
            name="close"
            size={16}
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
        },
        {
          "borderColor": "#e0e0e0",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      onEndEditing={[Function]}
      style={
        {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="11"
    />
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <Text
    style={
      {
        "color": "#b71c1c",
        "fontSize": 10,
        "marginBottom": 12,
      }
    }
  >
    [missing "en.ITEM.OH_UPDATE_API_ERROR" translation]
  </Text>,
  <View
    style={
      [
        {
          "height": 45,
        },
        {
          "marginTop": 16,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#0071e9",
            "borderRadius": 5,
            "elevation": 1,
            "flex": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="saveButton"
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontFamily": "Roboto-Medium",
              "fontSize": 16,
              "fontWeight": "normal",
              "textAlign": undefined,
            }
          }
        >
          [missing "en.GENERICS.SAVE" translation]
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`testing OHQtyUpdate component render component and test buttons render component with invalid new qty 1`] = `
[
  <View
    style={
      {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="closeButton"
        >
          <mockMaterialCommunityIcons
            color="#9e9e9e"
            name="close"
            size={16}
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
        },
        {
          "borderColor": "#b71c1c",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#BABBBE"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      onEndEditing={[Function]}
      style={
        {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="-11"
    />
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      {
        "color": "#b71c1c",
        "fontSize": 10,
        "marginBottom": 12,
      }
    }
  >
    [missing "en.ITEM.OH_UPDATE_ERROR" translation]
  </Text>,
  <Text
    style={
      {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <View
    style={
      [
        {
          "height": 45,
        },
        {
          "marginTop": 16,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#BABBBE",
            "borderRadius": 5,
            "elevation": 1,
            "flex": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="saveButton"
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontFamily": "Roboto-Medium",
              "fontSize": 16,
              "fontWeight": "normal",
              "textAlign": undefined,
            }
          }
        >
          [missing "en.GENERICS.SAVE" translation]
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`testing OHQtyUpdate component render component and test buttons render component with isWating true 1`] = `
[
  <View
    style={
      {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  />,
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
        },
        {
          "borderColor": "#e0e0e0",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      onEndEditing={[Function]}
      style={
        {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="10"
    />
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <ActivityIndicator
    color="#0071e9"
    hidesWhenStopped={true}
    size="large"
    style={
      {
        "marginTop": 16,
      }
    }
  />,
]
`;

exports[`testing OHQtyUpdate component render component and test buttons render component with same onhands and new qty 1`] = `
[
  <View
    style={
      {
        "alignContent": "flex-start",
        "flexDirection": "row",
        "height": 45,
        "justifyContent": "flex-end",
        "width": "100%",
      }
    }
  >
    <View
      style={
        [
          {
            "height": 45,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="closeButton"
        >
          <mockMaterialCommunityIcons
            color="#9e9e9e"
            name="close"
            size={16}
          />
        </View>
      </View>
    </View>
  </View>,
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
        },
        {
          "borderColor": "#e0e0e0",
        },
      ]
    }
    testID="numericSelector"
  >
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="decreaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="minus"
            size={18}
          />
        </View>
      </View>
    </View>
    <TextInput
      keyboardType="numeric"
      onChangeText={[Function]}
      onEndEditing={[Function]}
      style={
        {
          "color": "#0071e9",
          "height": 40,
          "minWidth": "15%",
          "textAlign": "center",
        }
      }
      testID="numericTextInput"
      value="10"
    />
    <View
      style={
        [
          {
            "height": 15,
            "width": 35,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#00000000",
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID="increaseButton"
        >
          <mockMaterialCommunityIcons
            color="#0071e9"
            name="plus"
            size={18}
          />
        </View>
      </View>
    </View>
  </View>,
  <Text
    style={
      {
        "fontSize": 18,
        "paddingVertical": 4,
      }
    }
  >
    [missing "en.GENERICS.TOTAL" translation] [missing "en.ITEM.ON_HANDS" translation]
  </Text>,
  <View
    style={
      [
        {
          "height": 45,
        },
        {
          "marginTop": 16,
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": true,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#BABBBE",
            "borderRadius": 5,
            "elevation": 1,
            "flex": 1,
            "justifyContent": "center",
            "opacity": 1,
          }
        }
        testID="saveButton"
      >
        <Text
          style={
            {
              "color": "#ffffffff",
              "fontFamily": "Roboto-Medium",
              "fontSize": 16,
              "fontWeight": "normal",
              "textAlign": undefined,
            }
          }
        >
          [missing "en.GENERICS.SAVE" translation]
        </Text>
      </View>
    </View>
  </View>,
]
`;
